# Haskell-Crossy-Road

./: 2022li1g025.cabal  README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.5/: 2022li1g025-0.1.0.0-inplace.conf  package.cache
doc/html/2022li1g025/: 2022li1g025.haddock  LI12223.html  Main.html  Tarefa1_2022li1g025.html  Tarefa1_2022li1g025_Spec.html  Tarefa2_2022li1g025.html  Tarefa2_2022li1g025_Spec.html  Tarefa3_2022li1g025.html  Tarefa3_2022li1g025_Spec.html  Tarefa4_2022li1g025.html  Tarefa4_2022li1g025_Spec.html  Tarefa5_2022li1g025.html  Tarefa5_2022li1g025_Spec.html  doc-index.html  index.html
src/: Main.hi  Main.hs  Tarefa1_2022li1g025.hi  Tarefa1_2022li1g025.hs  Tarefa2_2022li1g025.hi  Tarefa2_2022li1g025.hs  Tarefa3_2022li1g025.hi  Tarefa3_2022li1g025.hs  Tarefa4_2022li1g025.hi  Tarefa4_2022li1g025.hs  Tarefa5_2022li1g025.hi  Tarefa5_2022li1g025.hs
tests/: Spec.hs  Tarefa1_2022li1g025_Spec.hs  Tarefa2_2022li1g025_Spec.hs  Tarefa3_2022li1g025_Spec.hs  Tarefa4_2022li1g025_Spec.hs  Tarefa5_2022li1g025_Spec.hs
